fixed up the houz bar on mobile

--- a/src/components/pagestyles/home.sass
+++ b/src/components/pagestyles/home.sass
@@ -28,10 +28,19 @@
   display: flex 
   width: 100%
   height: 350px 
+  @include tablet-phone
+    flex-direction: column
+    justify-content: space-around
+    align-items: center
+
   &__left, &__right 
     width: 50%
     display: flex 
     align-items: center
+    @include tablet-phone
+      width: 100%
+      align-items: space-between
+      justify-content: center
   &__left 
     &__container
       display: flex 
@@ -48,6 +57,9 @@
     text-align: right 
     // align-content: flex-end 
     align-items: flex-end
+    @include tablet-phone
+      align-items: center
+      text-align: center
     p 
       max-width: 70% 
       margin-top: .65em
